--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Bear Harbor — A U.S.-based global sourcing and trade facilitation firm specializing in industrial raw materials and bulk commodities." />
-    <title>Bear Harbor | Structured Global Sourcing</title>
+    <title>Bear Harbor AG | Global Sourcing & Trade Facilitation</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet"/>
